fixing bug found on iphoneX grid tables scroll

--- a/styles.css
+++ b/styles.css
@@ -136,16 +136,30 @@ main {
     gap: 24px;
     overflow-x: scroll;
     margin: 52px auto;
-    padding: 0 25%;
+    padding: 0 10%;
     overscroll-behavior-x: contain;
     scroll-snap-type: x proximity;
 }
-.tables-container, .tables-container2 {
+.tables-container {
     scroll-snap-align: center;
     justify-self: center;
     min-width: 240px;
     height: 290px;
     margin: 12px 0;
+    margin-left: 26px;
+    padding: 12px 0 0 0;
+    font-family: 'Inter', sans-serif;
+    border-radius: 15px;
+    border: 1px solid #3b3b3b;
+    box-shadow: 8px 8px 4px #000;
+}
+.tables-container2 {
+    scroll-snap-align: center;
+    justify-self: center;
+    min-width: 240px;
+    height: 290px;
+    margin: 12px 0;
+    margin-right: 26px;
     padding: 12px 0 0 0;
     font-family: 'Inter', sans-serif;
     border-radius: 15px;
